# ImmLoom

./: .gitignore  README.md  install.txt  pyproject.toml
data/metadata/: dataset-02_mapping.tsv
data/processed/dataset-02/config/: pwp_IGH.tsv  pwp_IGK.tsv  pwp_IGL.tsv  pwp_TRA.tsv  pwp_TRB.tsv  pwp_TRG.tsv
data/processed/dataset_01/configs/: config_IGH.csv  (+5 more)
data/processed/dataset_01_subset/: locus_contig_table.tsv
immloom_out/self_0-s01_h1_IGH/: block.tsv  dsegm_inv.tsv
notebooks/: alignments.ipynb  connected_components.ipynb  immloom_self.ipynb  pairs.ipynb  self.ipynb
preprocessing/: create_dataset-01.py  create_dataset-02.py  process_dataset-01.py  process_dataset-02.py
runs/: run_dataset-01-IGH.sh  run_dataset-02-IGH.sh
scripts/: build_alignment_graphs.py  build_component_fastas.py  build_locus_contig_table.py  build_pair_tables.py  create_ig_configs.py  multi_blocks.py  normalize_fasta_names.py  reverse_patchwork.py  run_all.sh  run_clustalo.py  run_pairs.py  run_pairs_all.sh  run_pipeline.py  run_self.py  run_self_all.sh  self_blocks.py
src/immloom/: __init__.py  alignments.py  io_utils.py  pipeline.py  segments.py  viz.py
src/immloom/blocks/: build_blocks.py  build_graph.py  connect_blocks.py
src/immloom/components/: build_msa_figures.py  build_msa_graphs.py  export_component_fasta.py  run_clustalo.py
src/immloom/geometry/: segments.py
src/immloom/graph/: blocks.py
src/immloom/io/: alignment.py
src/immloom/plotting/: necklace.py  segments.py
src/immloom/pwp/: make_pwp_config.py  reorient_to_forward.py  run_patchworkplot.py
(+305 files in other folders)
